# cip

./: Cargo.toml
cip/: Cargo.toml
cip/src/: cip.rs  common.rs  lib.rs
cip/src/objects/: connection_manager.rs  message_router.rs  mod.rs
enip/: Cargo.toml
enip/src/: common.rs  cpf.rs  encapsulation.rs  lib.rs  tcp.rs  udp.rs
src/: cip.rs  common.rs  cpf.rs  enip.rs  lib.rs
src/objects/: connection_manager.rs  message_router.rs
tests/: enip.rs
