[package]
name = "cip"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/a1g3/cip"
description="A pure EtherNet/IP library written in Rust"
keywords = ["cip", "enip", "ethernet/ip", "common industry protocol"]

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
colored = "2.0.4"
dashmap = "6.0.1"
deadqueue = "0.2.4"
futures = "0.3.29"
futures-rustls = { version = "0.26.0", default-features = false, features = ["ring"] }
log = "0.4.22"
nom = "7.1.3"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
rust-ini = "0.20.0"
serde = { version = "1.0.192", features = ["derive"] }
simple-logging = "2.0.2"
strum = "0.26.3"
strum_macros = "0.26.4"
tokio = { version = "1", features = ["full"] }
webpki-roots = "0.26.3"

[[bin]]
name = "fwdopen-spam"
path = "src/bin/fwdopen-spam.rs"

[[bin]]
name = "supported-cip-objects"
path = "src/bin/supported-cip-objects.rs"
